--- a/src/Components/Popup/Popup.css
+++ b/src/Components/Popup/Popup.css
@@ -4,9 +4,9 @@
   z-index: 1; /* Sit on top */
   padding-top: 300px; 
   /* Location of the box */
-  margin: auto;
-  left: 0;
-  top: 0;
+  margin: 0 auto;
+  /* left: 0;
+  top: 0; */
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
